# aurora-asset-downloader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: errors.rs  main.rs  models.rs
